Mon Jul  7 17:00:33 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/ProjectCreator.pm:

          MPC had always assumed that output files went into the same
          directory as the input file (unless specified otherwise through
          gendir).  Now, in the Define_Custom for the command, this
          assumption can be modified.  If 'output_follows_input' is set to
          0, it will assume that output files go into the same directory as
          the project (unless specified otherwise through gendir).

Mon Jul  7 13:10:46 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Modified the behavior of adding to prebuild, postbuild, and
          postclean.  Values that are added are now separated via the
          command separator for the project type.  This will assure that
          multiple commands are executed separately (and unconditionally).

Thu Jul  3 16:36:30 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/Creator.pm:
        * modules/ProjectCreator.pm:

          Added a new keyword, postclean, which is similar to postbuild
          except that it is executed during the realclean target.

        * templates/bmake.mpd:
        * templates/html.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:

          Added the use of postclean.

Thu Jul  3 14:49:52 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          For the previous change to generate_default_components(), we only
          need to do this if the list of component tags was not provided to
          the method.

Thu Jul  3 11:46:23 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed an issue where a chain of three or more Custom_Define's
          would not have the right default input/output.

Wed Jul  2 16:35:22 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
